--- a/frontend/pug/modules/header.pug
+++ b/frontend/pug/modules/header.pug
@@ -25,23 +25,23 @@ header.header
               a(href="#").header__naw-items Contact Us
   div.owl-carousel.owl-theme
     .slider__item
-      //- .bg-video
-      //-   video(autoplay muted loop).bg-video__content
-      //-     source(src="./image/video/video-1.mp4" type="video/mp4")
+      .bg-video
+        video(autoplay muted loop).bg-video__content
+          source(src="./image/video/video-1.mp4" type="video/mp4")
       .slider__slogan Mileage Made Simple
       .slider__little-logan Motivation And Your Personal Vision An Unbeatable Force
       button.btn.btn--green Start Free Trial
     .slider__item
-      //- .bg-video
-      //-   video(autoplay muted loop).bg-video__content
-      //-     source(src="./image/video/video-2.mp4" type="video/mp4")
+      .bg-video
+        video(autoplay muted loop).bg-video__content
+          source(src="./image/video/video-2.mp4" type="video/mp4")
       .slider__slogan Mileage Made Simple
       .slider__little-logan Motivation And Your Personal Vision An Unbeatable Force
       button.btn.btn--green Start Free Trial
     .slider__item
-      //- .bg-video
-      //-   video(autoplay muted loop).bg-video__content
-      //-     source(src="./image/video/video-3.mp4" type="video/mp4")
+      .bg-video
+        video(autoplay muted loop).bg-video__content
+          source(src="./image/video/video-3.mp4" type="video/mp4")
       .slider__slogan Mileage Made Simple
       .slider__little-logan Motivation And Your Personal Vision An Unbeatable Force
       button.btn.btn--green Start Free Trial
